# django-chat-sample

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_userconnection_status.py  0003_remove_userconnection_first_user_and_more.py
chat/templates/: home.html  index.html  room.html
chat/tests/: test_auth.py  test_connection.py
django_chat/: asgi.py  db.sqlite3  settings.py  settings_base.py  settings_test.py  urls.py  views.py
django_chat/management/commands/: populate_db.py
django_chat/templates/: base.html
django_chat/templates/registration/: login.html
