[tool.poetry]
name = "django_chat"
version = "0.0.1"
description = "Django Chat app"
authors = ["Leonardo Oliveira <dev.loliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
attrs = "==19.3.0"
Django = "==4.2.1"
gunicorn = "==19.10.0"
psycopg2 = "==2.8.4"
werkzeug = "==0.14.1"
alembic = "==1.4.3"
flake8 = "*"
pycrypto = "==2.6.1"
geopy = "^2.3.0"
djangorestframework = "==3.14.0"
markdown = "==3.0.0"
django-filter = "==1.0.1"
django-rest-marshmallow = "==4.0.2"
marshmallow = "==3.19.0"
pytest-django = "4.5.2"
certifi = "==2019.11.28"

[tool.poetry.dev-dependencies]
coverage = "5.5"
Faker = "==4.*"
factory-boy = "==3.*"
flake8 = "==3.7.9"
flake8-comprehensions = "==3.2.2"
flake8-print = "==3.1.4"
flake8-quotes = "==2.1.1"
ipython = "==7.13.0"
isort = "==4.3.21"
pylint = "==2.4.4"
pytest = "7.0.0"
pytest-cov = "^4.0.0"
pytest-xdist = "2.2.1"
pytest-mock = "==3.*"
pytest-env = "0.6.2"
pytest-lazy-fixture = "^0.6.3"
pyinstrument = "^4.4.0"
